# Fairness_in_Face_Classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 2_Data_Exploration.ipynb  4_Model_Training.ipynb
scripts/: evaluate.py  prepare_labels.py  preprocess_to_hdf5.py  train.py
src/ff_pipeline/: __init__.py  datasets.py  evaluation.py  hdf5_utils.py  labels.py  modeling.py  paths.py  preprocess.py  training.py
src/ff_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
